big picture styles applied

--- a/index.html
+++ b/index.html
@@ -13,6 +13,111 @@
 </head>
 
 <body>
+  <header>
+    <img src="img/hero.jpg" alt="hero image">
+    <h3>acme</h3>
+    <div>
+      <h4>Home</h4>
+      <h4>Blog</h4>
+    </div>
+  </header>
+
+  <section class="container hero flow-content-large">
+    <p>Lorem ipsum dolor sit amet, consectet  adipiscing</p>
+    <p>Lorem ipsum dolor sit amet, consectet  adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+    <a class="btn" href="#">Connect&nbsp;&nbsp;&nbsp;></a>
+  </section>
+
+  <section class="container about">
+    <h4 class="title">About</h4>
+    <div class="flow-content-large">
+      <p>Lorem ipsum dolor sit amet, consectet  adipiscing elit, sed do eiusmod tempor incididunt ut labore dolore magna sed do amet.</p>
+      <p>Lorem ipsum dolor sit amet, consectet  adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna. Lorem ipsum dolor sit amet, consectet  adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+    </div>
+  </section>
+
+  <section class="container blog ">
+    <h4 class="title">Blog</h4>
+    <div class="flow-content-large">
+      <p>Latest thoughts, news and ideas</p>
+      <div>
+        <div class="card flow-content-small">
+          <img src="img/blog-1.jpg" alt="drill doodle">
+          <p>Lorem ipsum dolor sit amet, consectet  adipiscing</p>
+          <p>Lorem ipsum dolor sit amet, consectet  adipiscing</p>
+          <div>
+            <p>Oct 8</p>
+            <p>8 min read</p>
+          </div>
+        </div>
+        <div class="card flow-content-small">
+          <img src="img/blog-1.jpg" alt="drill doodle">
+          <p>Lorem ipsum</p>
+          <p>Lorem ipsum dolor sit amet, consectet  adipiscing</p>
+          <div>
+            <p>Oct 8</p>
+            <p>8 min read</p>
+          </div>
+        </div>
+        <div class="card flow-content-small">
+          <img src="img/blog-1.jpg" alt="drill doodle">
+          <p>Lorem ipsum dolor sit amet, consectet  adipiscing</p>
+          <p>Lorem ipsum dolor sit amet, consectet  adipiscing</p>
+          <div>
+            <p>Oct 8</p>
+            <p>8 min read</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="container inbox">
+    <h4 class="title">Inbox</h4>
+    <div class="flow-content-large">
+      <h4>Knowledge letters</h4>
+      <img src="img/newsletter.jpg" alt="newsletter image">
+      <div class="flow-content-small">
+        <div>
+          <p>Name</p>
+          <input placeholder="Your Name" type="text"/>
+        </div>
+        <div>
+          <p>Email</p>
+          <input placeholder="example@domain.com" type="email"/>
+        </div>
+      </div>
+      <a class="btn" href="#">Subscribe&nbsp;&nbsp;&nbsp;></a>
+    </div>
+  </section>
+
+  <section class="container footer">
+      <h3>acme</h3>
+      <div class="flow-content-small">
+        <p>Map</p>
+        <p>Blog</p>
+        <p>Privacy</p>
+      </div>
+      <div class="flow-content-small flow-content-small">
+        <p>Resources</p>
+        <p>Courses</p>
+        <p>Hacks</p>
+        <p>Free Stuff</p>
+      </div>
+    </div>
+    </section>
+    
+    <section class="container legal">
+      <p>&copy; 2024 acme. All rights reserved</p>
+      <div>
+        <p>Yt</p>
+        <p>Tw</p>
+        <p>Fb</p>
+        <p>Li</p>
+      </div>
+        </div>
+    </section>
+
 
 </body>
 
